feat: general improvements

--- a/index.html
+++ b/index.html
@@ -6,37 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" defer src="js/controller.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600;700;800&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="styles\styles.css" />
     <title>test</title>
   </head>
   <body>
+    <!-- //SECTION - HEADER ------------------------------------------->
     <header class="header">
       <section class="container">
         <div class="logo">
           <a href="index.html">MadBus</a>
         </div>
-          <button class="menu-btn">
-            <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem" class="">
-              <path d="M4 6H20V8H4zM4 11H20V13H4zM4 16H20V18H4z" />
+        <button class="menu-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem"
+            class="">
+            <path d="M4 6H20V8H4zM4 11H20V13H4zM4 16H20V18H4z" />
             </svg>
-            <svg xlmns="svg\x-square.svg"  width="2rem" height="2rem" stroke-width="1.5" stroke="currentColor" class="none">
+            <svg xlmns="svg\x-square.svg" width="2.25rem" height="2.25rem"
+              stroke-width="1" stroke="currentColor" class="none">
             </svg>
           </button>
           <nav class="menu">
-            <a href="#parada">Buscar parada</a><a href="#linea">Linea</a><a href="#mapa">Mapa</a><a href="#contacto">Contacto</a>
+            <a href="#parada">Buscar parada</a><a href="#linea">Linea</a><a
+              href="#mapa">Mapa</a><a href="#contacto">Contacto</a>
           </nav>
-      </section>   
-    </header>
-
-    <section id="stop" class="container">
-      <form class="stop__search">
-        <input type="text" class="stop__input" placeholder="Nombre o número de parada">
-        <button class="btn search__btn"><span>BUSCAR</span></button>
-      </form>
-      <div class="stop-card__container">
-        <!-- <div class="stop-card__info">
+        </section>
+      </header>
+      <!-- //SECTION - OTHER SECTION ------------------------------------>
+      <section id="stop" class="container">
+        <form class="stop__search">
+          <input type="text" class="stop__input" placeholder="Nombre o número de
+            parada">
+          <button class="btn search__btn"><span>BUSCAR</span></button>
+        </form>
+        <div class="stop-card__container">
+          <!-- <div class="stop-card__info">
           <div class="stop-card__name">
             <h2>ESQUERDO GOYA</h2>
             <h4>Doctor esquerdo Goya, 54</h4>
@@ -69,7 +76,7 @@
             <div class="line__max-freq">35</div>
           </div>
         </div> -->
-      </div>
-    </secti>
-  </body>
-</html>
+        </div>
+      </secti>
+    </body>
+  </html>
