--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <!-- //SECTION - HEADER ------------------------------------------->
+    <div class="overlay hidden"></div>
     <header class="header">
       <section class="container">
         <div class="logo">
@@ -35,13 +36,14 @@
           </nav>
         </section>
       </header>
-      <!-- //SECTION - OTHER SECTION ------------------------------------>
+      <!-- //SECTION - STOP SEARCH --------------------------------------------->
       <section id="stop" class="container">
+        <!-- //SECTION - STOP SEARCH INPUT ------------------------------------->
         <form class="stop__search">
-          <input type="text" class="stop__input" placeholder="Nombre o número de
-            parada">
-          <button class="btn search__btn"><span>BUSCAR</span></button>
+          <h4><strong>Buscar parada</strong></h4>
+          <input type="text" class="stop__input" placeholder="Nombre o número de parada">
         </form>
+      <!-- //SECTION - STOP SEARCH RESULTS ------------------------------------> 
         <div class="stop-card__container">
           <!-- <div class="stop-card__info">
           <div class="stop-card__name">
