feat: add error handling

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- //SECTION - STOP SEARCH INPUT ------------------------------------->
         <form class="stop__search">
           <h4><strong>Buscar parada</strong></h4>
-          <input type="text" class="stop__input" placeholder="Nombre o número de parada">
+          <input type="text" class="stop__input" placeholder="Escriba número de parada">
         </form>
       <!-- //SECTION - STOP SEARCH RESULTS ------------------------------------> 
         <div class="stop-card__container">
