feat: map added

--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" defer src="js/controller.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.1/dist/leaflet.css"
+      integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+      crossorigin=""
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"
+      integrity="sha256-NDI0K41gVbWqfkkaHj15IzU7PtMoelkzyKp8TOaFQ3s="
+      crossorigin=""
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600;700;800&display=swap"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles\styles.css" />
     <title>test</title>
   </head>
@@ -22,30 +34,38 @@
           <a href="index.html">MadBus</a>
         </div>
         <button class="menu-btn">
-          <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem"
-            class="">
-            <path d="M4 6H20V8H4zM4 11H20V13H4zM4 16H20V18H4z" />
-            </svg>
-            <svg xlmns="svg\x-square.svg" width="2.25rem" height="2.25rem"
-              stroke-width="1" stroke="currentColor" class="none">
-            </svg>
-          </button>
-          <nav class="menu">
-            <a href="#parada">Buscar parada</a><a href="#linea">Linea</a><a
-              href="#mapa">Mapa</a><a href="#contacto">Contacto</a>
-          </nav>
-        </section>
-      </header>
-      <!-- //SECTION - STOP SEARCH --------------------------------------------->
-      <section id="stop" class="container">
-        <!-- //SECTION - STOP SEARCH INPUT ------------------------------------->
-        <form class="stop__search">
-          <h4><strong>Buscar parada</strong></h4>
-          <input type="text" class="stop__input" placeholder="Escriba número de parada">
-        </form>
-      <!-- //SECTION - STOP SEARCH RESULTS ------------------------------------> 
-        <div class="stop-card__container">
-          <!-- <div class="stop-card__info">
+          <svg>
+            <use href="img/icons.svg#icon-menu"></use>
+          </svg>
+          <svg
+            xlmns="svg\x-square.svg"
+            width="2.25rem"
+            height="2.25rem"
+            stroke-width="1"
+            stroke="currentColor"
+            class="none"
+          ></svg>
+        </button>
+        <nav class="menu">
+          <a href="#parada">Buscar parada</a><a href="#linea">Linea</a
+          ><a href="#mapa">Mapa</a><a href="#contacto">Contacto</a>
+        </nav>
+      </section>
+    </header>
+    <!-- //SECTION - STOP SEARCH --------------------------------------------->
+    <section id="stop" class="container">
+      <!-- //SECTION - STOP SEARCH INPUT ------------------------------------->
+      <form class="stop__search">
+        <h4><strong>Buscar parada</strong></h4>
+        <input
+          type="text"
+          class="stop__input"
+          placeholder="Escriba número de parada"
+        />
+      </form>
+      <!-- //SECTION - STOP SEARCH RESULTS ------------------------------------>
+      <div class="stop-card__container">
+        <!-- <div class="stop-card__info">
           <div class="stop-card__name">
             <h2>ESQUERDO GOYA</h2>
             <h4>Doctor esquerdo Goya, 54</h4>
@@ -78,7 +98,8 @@
             <div class="line__max-freq">35</div>
           </div>
         </div> -->
-        </div>
-      </secti>
-    </body>
-  </html>
+      </div>
+      <div id="map"></div>
+    </section>
+  </body>
+</html>
