--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
       crossorigin=""
     />
+    <link rel="stylesheet" href="styles\sass\styles.css" />
     <script
       src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"
       integrity="sha256-NDI0K41gVbWqfkkaHj15IzU7PtMoelkzyKp8TOaFQ3s="
@@ -22,50 +23,42 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles\styles.css" />
     <title>test</title>
   </head>
   <body>
     <!-- //SECTION - HEADER ------------------------------------------->
     <div class="overlay hidden"></div>
-    <header class="header">
-      <section class="container">
-        <div class="logo">
-          <a href="index.html">MadBus</a>
-        </div>
+    <div class="app">
+      <header class="header container">
+        <a href="index.html" class="logo">MadBus</a>
         <button class="menu-btn">
           <svg>
             <use href="img/icons.svg#icon-menu"></use>
           </svg>
-          <svg
-            xlmns="svg\x-square.svg"
-            width="2.25rem"
-            height="2.25rem"
-            stroke-width="1"
-            stroke="currentColor"
-            class="none"
-          ></svg>
         </button>
         <nav class="menu">
-          <a href="#parada">Buscar parada</a><a href="#linea">Linea</a
-          ><a href="#mapa">Mapa</a><a href="#contacto">Contacto</a>
+          <a href="#parada" data-option="stop">BUSCAR PARADA</a
+          ><a href="#mapa" data-option="map">BUSCAR PARADAS EN EL MAPA</a
+          ><a href="#favoritos" data-option="map">FAVORITOS</a
+          ><a href="#contacto" data-option="contact">CONTACTO</a>
         </nav>
-      </section>
-    </header>
-    <!-- //SECTION - STOP SEARCH --------------------------------------------->
-    <section id="stop" class="container">
-      <!-- //SECTION - STOP SEARCH INPUT ------------------------------------->
-      <form class="stop__search">
-        <h4><strong>Buscar parada</strong></h4>
-        <input
-          type="text"
-          class="stop__input"
-          placeholder="Escriba número de parada"
-        />
-      </form>
-      <!-- //SECTION - STOP SEARCH RESULTS ------------------------------------>
-      <div class="stop-card__container">
-        <!-- <div class="stop-card__info">
+      </header>
+      <!-- //SECTION - STOP SEARCH --------------------------------------------->
+      <section id="stop" class="container">
+        <!-- //SECTION - STOP SEARCH INPUT ------------------------------------->
+        <form class="stop__search expandable" id="parada">
+          <h4><strong>Buscar parada</strong></h4>
+          <input
+            class="stop__input"
+            type="text"
+            placeholder="Escriba número de parada"
+          />
+        </form>
+
+        <!-- //SECTION - STOP SEARCH RESULTS ------------------------------------>
+
+        <div class="stop-card__container">
+          <!-- <div class="stop-card__info">
           <div class="stop-card__name">
             <h2>ESQUERDO GOYA</h2>
             <h4>Doctor esquerdo Goya, 54</h4>
@@ -98,8 +91,9 @@
             <div class="line__max-freq">35</div>
           </div>
         </div> -->
-      </div>
-      <div id="map"></div>
-    </section>
+        </div>
+        <div id="map"></div>
+      </section>
+    </div>
   </body>
 </html>
