feat: added login

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <!-- //SECTION - HEADER ------------------------------------------->
+    <div class="login"><h1>MadBus</h1></div>
     <div class="overlay hidden"></div>
     <div class="app">
       <header class="header container">
