feat: add update btn

--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
   </head>
   <body>
     <!-- //SECTION - HEADER ------------------------------------------->
-    <div class="login"><h1>MadBus</h1></div>
+    <div class="login">
+      <h1>MadBus</h1>
+      <div class="three-body">
+        <div class="three-body__dot"></div>
+        <div class="three-body__dot"></div>
+        <div class="three-body__dot"></div>
+      </div>
+    </div>
     <div class="overlay hidden"></div>
     <div class="app">
       <header class="header container">
