feat: save stops implementation of feature to save favorite stops to local storage, retrieve previously saved data, and display saved data. Lots of bugs on the display feature need to be repaired

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <nav class="menu">
           <a href="#parada" data-option="stop">BUSCAR PARADA</a
           ><a href="#mapa" data-option="map">BUSCAR EN EL MAPA</a
-          ><a href="#favoritos" data-option="map">FAVORITOS</a
+          ><a href="#favoritos" data-option="fav">FAVORITOS</a
           ><a href="#contacto" data-option="contact">CONTACTO</a>
         </nav>
       </header>
@@ -107,6 +107,37 @@
         </div> -->
         </div>
         <div id="map"></div>
+      </section>
+      <!-- //SECTION - FAVOURITES --------------------------------------------->
+      <section id="favoritos" class="container">
+        <div class="fav__container hidden">
+          <div class="fav__results">
+            <div class="fav__item">
+              <h4>6127</h4>
+              <aside>
+                <h5>NOMBRE DE LA PARADA</h5>
+                <p>Direccion de la parada</p>
+                <div class="item__lines">
+                  <div>C1</div>
+                  <div>C2</div>
+                  <div>C3</div>
+                </div>
+              </aside>
+            </div>
+            <div class="fav__item">
+              <h4>1401</h4>
+              <aside>
+                <h5>NOMBRE DE LA PARADA</h5>
+                <p>Direccion de la parada</p>
+                <div class="item__lines">
+                  <div>C1</div>
+                  <div>C2</div>
+                  <div>C3</div>
+                </div>
+              </aside>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </body>
