feat: delete favorite
Added button to delete favorite stop and its functionality

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </section>
       <!-- //SECTION - FAVOURITES --------------------------------------------->
       <section id="favoritos" class="container">
-        <div class="fav__container hidden">
+        <div class="fav__container">
           <div class="fav__results">
             <div class="fav__item">
               <h4>6127</h4>
@@ -135,6 +135,7 @@
                   <div>C3</div>
                 </div>
               </aside>
+              <div class="item__delete">X</div>
             </div>
           </div>
         </div>
