--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
           <a href="#parada" data-option="stop">BUSCAR PARADA</a
           ><a href="#mapa" data-option="map">BUSCAR EN EL MAPA</a
           ><a href="#favoritos" data-option="fav">FAVORITOS</a
-          ><a href="#contacto" data-option="contact">CONTACTO</a>
+          ><!-- <a href="#contacto" data-option="contact">CONTACTO</a> -->
         </nav>
       </header>
       <!-- //SECTION - STOP --------------------------------------------------->
-      <section id="stop" class="container">
+      <section id="parada" class="container">
         <!-- //SECTION - STOP SEARCH INPUT ------------------------------------>
-        <form class="stop__search expandable" id="parada">
+        <form class="stop__search hidden" id="stop-form">
           <h4><strong>Buscar parada</strong></h4>
           <input
             class="stop__input"
